fix z-index

--- a/mine/css/album.css
+++ b/mine/css/album.css
@@ -11,6 +11,7 @@ html, body, main {
 	top: 50%;
 	width: 100%;
 	overflow: hidden;
+	z-index: 1;
 }
 
 #album div {
@@ -106,7 +107,7 @@ html, body, main {
 	position: absolute;
 	left: calc( calc(50% - calc( 50vh * 0.55 )) - 25px );
 	bottom: calc( calc( 50vh * 0.55 ) - 25px);
-	z-index: 50;
+	z-index: 2;
 	display: table;
 	width: calc(50% - 25px);
 	min-width : calc( calc(100vh * 0.55) + 75px );
